Revision history for Perl extension AnyEvent.

4.35  Fri Mar 27 11:48:20 CET 2009
        - event models relying on AnyEvent's signal watcher emulation did
          invoke the callback asynchronously, contradicting documentation
          and causing signals to get lost (this includes AnyEvent's own
          event loop). AnyEvent now uses the standard pipe trick to make
          callback execution synchronous to the event loop.
        - AnyEvent::Handle didn't free TLS context data on DESTROY
          (patch by Pavel Shaydo).
        - work around the ever-incompatibly-changing API of MakeMaker.
        - document that changing global variables without restoring them
          is a bad idea in Perl (noted by Adam Rosenstein).
        - AnyEvent::Strict now barfs if ->io is passed a file.

4.34  Thu Feb 12 18:32:45 CET 2009
	- separately buffer TLS read data, as otherwise the read queue could
          deadlock as receiving data is not expected while draining the
          read queue (which cna only happen with TLS).
	- raise EBADMSG error on JSON decoding errors.
        - fix some minor manpage bugs (reported by Maximilian Gaß).
        - speed up select bitmask parsing quite a bit in the pure perl
          backend.
        - use CORE::select instead of just select in AnyEvent::Impl::Perl.

4.331 Tue Jan  6 21:07:25 CET 2009
	- socketpair fails on many vista machines because vista has
          completely broken accept/getpeername and getsockname functions,
          so we provide our own socketpair emulation that kind of works
          (AnyEvent::Util::portable_pipe).
        - new function: AnyEvent::Util::portable_socketpair.
	- take advantage of the Guard module if it exists.

4.33 Fri Nov 21 02:35:40 CET 2008
	- AnyEvent::Strict did errornously flag a fileno of 0 as
          illegal.
	- reduce memory usage and slightly speed up the pure perl backend
          by only storing the file descriptor, not the file handle.