@@ -1,5 +1,8 @@
 Revision history for Perl extension AnyEvent.
 
+	- set the cloexec flag on the signal pipe.
+        - actually make the signal pipe work under win32.
+
 4.35  Fri Mar 27 11:48:20 CET 2009
         - event models relying on AnyEvent's signal watcher emulation did
           invoke the callback asynchronously, contradicting documentation
